<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidtask.front.fragments.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_editHabitFragment"
            app:destination="@id/editHabitFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.androidtask.front.fragments.AboutAppFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about_app" />
    <fragment
        android:id="@+id/editHabitFragment"
        android:name="com.example.androidtask.front.fragments.EditHabitFragment"
        android:label="@string/edit_page"
        tools:layout="@layout/fragment_edit_habit" />
</navigation>